# team-2

./: hack-project.jsonc  vote-description.md
slackBot/: README.md  bot.py  docker-compose.yml  pyproject.toml
slackBot/src/: Dockerfile  main.py  rag.py  requirements.txt
userFrontend/: README.md  amplify.yml  pubspec.yaml
userFrontend/amplify/: team-provider-info.json
userFrontend/amplify/.config/: project-config.json
userFrontend/android/app/: build.gradle
userFrontend/android/app/src/main/: AndroidManifest.xml
userFrontend/android/app/src/main/kotlin/com/example/user_frontend/: MainActivity.kt
userFrontend/ios/Runner/: Info.plist
userFrontend/ios/Runner.xcodeproj/: project.pbxproj
userFrontend/lib/: main.dart
userFrontend/lib/models/: git_commit.dart
userFrontend/lib/providers/: role_provider.dart
userFrontend/lib/services/: api_service.dart
userFrontend/lib/widgets/: chat_screen.dart  side_panel.dart
userFrontend/linux/: CMakeLists.txt  my_application.cc
userFrontend/macos/Runner.xcodeproj/: project.pbxproj
userFrontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
userFrontend/macos/Runner/Configs/: AppInfo.xcconfig
userFrontend/test/: widget_test.dart
userFrontend/web/: index.html  manifest.json
userFrontend/windows/: CMakeLists.txt
userFrontend/windows/runner/: Runner.rc  main.cpp
